fix(QuickStart): fix icons filling the screen on Safari

--- a/src/assets/styles/quickStart.css
+++ b/src/assets/styles/quickStart.css
@@ -28,6 +28,7 @@
     top: 40px;
     transition: .25s ease;
     width: 660px;
+    height: 54px;
     z-index: 1;
 }
 
